--- a/BusBookingSystem/src/main/webapp/WEB-INF/web.xml
+++ b/BusBookingSystem/src/main/webapp/WEB-INF/web.xml
@@ -79,4 +79,14 @@
     <servlet-name>UpdateBusDetails</servlet-name>
     <url-pattern>/UpdateBusDetails</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>DeleteBus</display-name>
+    <servlet-name>DeleteBus</servlet-name>
+    <servlet-class>com.busticketbooking.servlet.DeleteBus</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>DeleteBus</servlet-name>
+    <url-pattern>/DeleteBus</url-pattern>
+  </servlet-mapping>
 </web-app>
