Search Buses Done!!

--- a/BusBookingSystem/src/main/webapp/WEB-INF/web.xml
+++ b/BusBookingSystem/src/main/webapp/WEB-INF/web.xml
@@ -89,4 +89,14 @@
     <servlet-name>DeleteBus</servlet-name>
     <url-pattern>/DeleteBus</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>SearchBus</display-name>
+    <servlet-name>SearchBus</servlet-name>
+    <servlet-class>com.busticketbooking.servlet.SearchBus</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>SearchBus</servlet-name>
+    <url-pattern>/SearchBus</url-pattern>
+  </servlet-mapping>
 </web-app>
